# context-relay

./: .gitignore  LICENSE  agentic.md  concept.md  concept.mermaid  devplan.md  script.md
fast/: .env.example  .gitignore  INTEGRATION_GUIDE.md  PHASE1_CRITIQUE.md  PHASE2_CRITIQUE.md  PHASE2_IMPLEMENTATION.md  README.md  SECURITY.md  VECTOR_SEARCH_SETUP.md  add-fragment.json  architecture.md  cli.py  cli.sh  clispec.md  create-version.json  critique.md  debug_mongo.py  devplan.md  gherkin.md  logic.md  main.py  openapi.json  pyproject.toml  pytest.ini  quick_test.py  requirements.txt  shared_schema.json  start.sh  start_server.py  test-init.json  test_mongo.py  test_phase2_integration.py  test_prune.json  test_search_query.py  test_vector_search.py  test_voyage.py  testplan.md  uvicorn_config.py
fast/app/: main.py
fast/app/api/: contexts.py  search.py
fast/app/config/: database.py
fast/app/core/: config.py  events.py
fast/app/models/: context.py  events.py  shared.py
fast/app/services/: event_broadcaster.py  event_service.py  mock_data.py  mock_data_service.py  mongodb_service.py  (+2 more)
fast/cli_tests/: test_cli.py
fast/diagrams/: 01-context-initialization-flow.mermaid  02-context-relay-flow.mermaid  03-context-merge-flow.mermaid  04-context-pruning-flow.mermaid  05-versioning-flow.mermaid  06-sse-event-flow-sequence.mermaid  06-sse-event-flow-state.mermaid  07-error-handling-flow.mermaid  08-end-to-end-integration-flow.mermaid
fast/status/: PHASE1_COMPLETE.md
fast/tests/: conftest.py  test_bdd.py  test_simple_bdd.py  validate_bdd_scenarios.py
(+26 files in other folders)
